--- a/gestao_cliente/requirements-dev.txt
+++ b/gestao_cliente/requirements-dev.txt
@@ -12,7 +12,7 @@ idna==2.6
 isort==4.3.4
 lazy-object-proxy==1.3.1
 mccabe==0.6.1
-menuinst==1.4.14
+# menuinst==1.4.14
 pycosat==0.6.3
 pycparser==2.18
 pylint==2.1.0
