--- a/gestao_cliente/requirements-dev.txt
+++ b/gestao_cliente/requirements-dev.txt
@@ -19,7 +19,7 @@ pylint==2.1.0
 pyOpenSSL==18.0.0
 PySocks==1.6.8
 python-decouple==3.1
-pywin32==223
+# pywin32==223
 requests==2.18.4
 ruamel-yaml==0.15.37
 six==1.11.0
