--- a/gestao_cliente/requirements-dev.txt
+++ b/gestao_cliente/requirements-dev.txt
@@ -4,7 +4,7 @@ certifi==2018.4.16
 cffi==1.11.5
 chardet==3.0.4
 colorama==0.3.9
-
+Pillow==5.3.0
 cryptography==2.2.2
 dj-database-url==0.5.0
 dj-static==0.0.6
@@ -30,3 +30,4 @@ urllib3==1.22
 win-inet-pton==1.0.1
 wincertstore==0.2
 wrapt==1.10.11
+django-bootstrap-form==3.4
