--- a/gestao_cliente/requirements.txt
+++ b/gestao_cliente/requirements.txt
@@ -1,3 +1,10 @@
--r requirements-dev.txt
-gunicorn
+certifi==2018.10.15
+dj-database-url==0.5.0
+dj-static==0.0.6
+Django==2.1.2
+Pillow==5.3.0
 psycopg2==2.7.5
+python-decouple==3.1
+pytz==2018.5
+static3==0.7.0
+wincertstore==0.2
