--- a/gestao_cliente/requirements.txt
+++ b/gestao_cliente/requirements.txt
@@ -3,6 +3,7 @@ dj-database-url==0.5.0
 dj-static==0.0.6
 Django==2.1.2
 Pillow==5.3.0
+gunicorn
 psycopg2==2.7.5
 python-decouple==3.1
 pytz==2018.5
